<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_signup"
        android:text="@string/s_signup_heading_text"
        android:textSize="@dimen/d_heading_textSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/d_heading_marginTop"
        android:textColor="@color/colorAccent"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/d_editText_width"
        android:layout_height="@dimen/d_textInputLayout_height"
        android:id="@+id/til_user"
        android:layout_below="@+id/tv_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="@dimen/d_editText_width"
            android:layout_height="@dimen/d_editText_height"
            android:id="@+id/et_user"
            android:hint="@string/s_sub_3"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/d_editText_width"
        android:layout_height="@dimen/d_textInputLayout_height"
        android:id="@+id/til_signup_userName"
        android:layout_below="@+id/til_user"
        android:layout_alignLeft="@+id/til_user"
        android:layout_alignStart="@+id/til_user"
        android:layout_marginTop="36dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="@dimen/d_editText_width"
            android:layout_height="@dimen/d_editText_height"
            android:id="@+id/et_signup_userName"
            android:hint="@string/s_sub_1"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/d_editText_width"
        android:layout_height="@dimen/d_textInputLayout_height"
        android:id="@+id/til_signup_password"
        android:layout_below="@+id/til_signup_userName"
        android:layout_alignLeft="@+id/til_signup_userName"
        android:layout_alignStart="@+id/til_signup_userName"
        android:layout_marginTop="46dp"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="@dimen/d_editText_width"
            android:layout_height="@dimen/d_editText_height"
            android:id="@+id/et_signup_password"
            android:inputType="textPassword"
            android:hint="@string/s_sub_2"/>
    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_signup"
        android:text="@string/s_signup_button_text"
        android:textSize="20sp"
        android:onClick="signup"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/til_signup_password"
        android:layout_alignLeft="@+id/tv_signup"
        android:layout_alignStart="@+id/tv_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login"
        android:text="@string/s_login_textView_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="login"
        android:layout_alignBaseline="@+id/b_signup"
        android:layout_alignBottom="@+id/b_signup"
        android:layout_alignRight="@+id/tv_signup"
        android:layout_alignEnd="@+id/tv_signup" />

</RelativeLayout>